@@ -141,6 +141,12 @@ glibc {
       maxval: 1
       default: 1
     }
+    seal {
+      type: INT_32
+      minval: 0
+      maxval: 1
+      default: 1
+    }
   }
 
   mem {
