@@ -383,6 +383,42 @@ main program does not require an executable stack at loading time.  This
 is enforced regardless of the tunable value.
 @end deftp
 
+@deftp Tunable glibc.rtld.seal
+Sets whether to enable memory sealing during program execution.  The sealed
+memory prevents further changes to the metadata associated with an ELF mapped
+memory region, such as shrinking or expanding its size, mapping another
+segment over a pre-existing region, or changing the memory protection flags
+(check the @code{mseal} for more information).
+
+The sealing is done in multiple places where the memory is supposed to be
+immutable over program execution:
+
+@itemize @bullet
+@item
+All shared library dependencies from the binary, including the read-only segments
+after @code{PT_GNU_RELRO} setup.
+
+@item
+The binary itself, including dynamic and static linked ones.  In both cases, it is
+up either to binary or the loader to set up the sealing.
+
+@item
+Any preload libraries.
+
+@item
+Any library loaded with @code{dlopen} with @code{RTLD_NODELETE} flag.
+
+@item
+All audit modules and their dependencies.
+@end itemize
+
+The tunable accepts two values: @samp{0} where sealing is disabled even if the
+program has the GNU attribute @code{GNU_PROPERTY_MEMORY_SEAL} if present,
+and @samp{1} where sealing is aplied accondingly to the GNU attribute existent.
+
+The default value of this tunable is @samp{1}.
+@end deftp
+
 @node Elision Tunables
 @section Elision Tunables
 @cindex elision tunables
